--- a/src/data/levels/05c_APU/17_DMC Channel 1-2 - Direct load/chat/es.yml
+++ b/src/data/levels/05c_APU/17_DMC Channel 1-2 - Direct load/chat/es.yml
@@ -37,5 +37,5 @@ exercise:
         **->** usa ```javascript this.addField(...)``` para definir un campo `directLoad` de 7 bits desde el bit 0
       **onWrite(value)**:
         **->** asigna el valor con ```javascript this.setValue(...)```
-        **->** asigna el <output sample> del canal a ```javascript this.directLoad```
+        **->** asigna ```javascript this.directLoad``` al <output sample> del canal
   responses: []
