Clarification about register limits

--- a/src/data/levels/05a_CPU/02_Registers/chat/en.yml
+++ b/src/data/levels/05a_CPU/02_Registers/chat/en.yml
@@ -16,7 +16,8 @@ main:
 
 limit:
   messages:
-  - it wraps 🎁 , and the resulting value always ends up being inside the valid range
+  - the real NEEES would never do that!
+  - but it should wrap 🎁 , and the resulting value always ends up being inside the valid range
   - |-
     here, some examples:
     ```raw ___________________________
