--- a/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
+++ b/src/data/levels/05b_PPU/01_New PPU/chat/en.yml
@@ -12,7 +12,7 @@ main:
 
 wdym:
   messages:
-  - 📈  the NEEES generates a 60FPS video signal
+  - 📈  the NEEES generates a ~60FPS~ video signal
   - 🖼️  each frame is a ~256x240~ image (think of it as a pixel grid)
   - 🌠  a scanline would be one row of that grid
   - 🚲  oh, and each scanline takes 341 PPU cycles to render
