--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
@@ -75,7 +75,7 @@ exercise:
       // <test>
       for (let x = 0; x < 256; x++) {
         for (let y = 0; y < 240; y++) {
-          this.plot(x, y, 0xff000000 | this.frame % 0xff);
+          this.plot(x, y, 0xff000000 | this.frame % 256);
         }
       }
       // </test>```
