--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
@@ -75,9 +75,18 @@ exercise:
       // <test>
       for (let x = 0; x < 256; x++) {
         for (let y = 0; y < 240; y++) {
-          this.plot(x, y, 0xff000000 | this.frame % 256);
+          this.plot(x, y, 0xff000000 + this.frame % 256);
         }
       }
       // </test>```
   - try it! when loading a ROM, it should slowly paint the screen in red 🔴
-  responses: []
+  responses:
+  - (*) how does the test code work? [testcode]
+
+testcode:
+  messages:
+  - it fills the entire screen with a color
+  - which is ```javascript 0xff000000``` (fully opaque black) plus a red component that depends on ```javascript this.frame``` (the current frame!)
+  - "```javascript this.frame % 256``` gives the remainder of dividing the frame by 256, so the red component cycles from 0 to 255"
+  responses:
+  - ...exercise
