Cleaning up part of PPU chapter

--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
@@ -47,8 +47,8 @@ help:
   - what, you need help? 🤣
   - well... I'm listening
   responses:
-  - help me with the math 🔢 [math]
-  - what's the backdrop color? 💧 [backdrop]
+  - (*) help me with the math 🔢 [math]
+  - (*) what's the backdrop color? 💧 [backdrop]
 
 math:
   messages:
@@ -72,13 +72,13 @@ math:
   - (you need to read 2 bits, starting from bit `blockIndex * 2`)
   - and that will give you the `paletteId` of that ~(x, y)~ point!
   responses:
-  - oof [oof]
+  - it's 100% perfectly clear now, thanks! [clear]
 
-oof:
+clear:
   messages:
-  - yeeeah... life sucks 😅
-  - well, good luck!
-  responses: []
+  - glad to help :D
+  responses:
+  - ...help
 
 backdrop:
   messages:
