--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/es.yml
@@ -47,8 +47,8 @@ help:
   - ¿qué, necesitas ayuda? 🤣
   - bueno... estoy escuchando
   responses:
-  - ayúdame con las matemáticas 🔢 [math]
-  - ¿cuál es el color de fondo? 💧 [backdrop]
+  - (*) ayúdame con las matemáticas 🔢 [math]
+  - (*) ¿cuál es el color de fondo? 💧 [backdrop]
 
 math:
   messages:
@@ -72,12 +72,11 @@ math:
   - (necesitas leer 2 bits, comenzando desde el bit `blockIndex * 2`)
   - ¡y eso te dará el `paletteId` de ese punto ~(x, y)~!
   responses:
-  - uff [oof]
+  - está 100% perfectamente claro ahora, ¡gracias! [clear]
 
-oof:
+clear:
   messages:
-  - síii... la vida es dura 😅
-  - bueno, ¡buena suerte!
+  - me alegra ayudar :D
   responses: []
 
 backdrop:
