--- a/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/es.yml
+++ b/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/es.yml
@@ -14,7 +14,7 @@ exercise:
   - simple, cuando se solicita una <lectura>, lees en un buffer, pero luego retornas el <valor anterior> de ese buffer
   - |-
     📚  implementa estos métodos en 📦  `PPUData`:
-    **onLoad**:
+    **onLoad()**:
       **->** inicializa ```javascript this.buffer = 0```
     **onRead()**:
       **->** guarda ```javascript this.buffer``` en una variable llamada `data`
