--- a/src/data/levels/05b_PPU/07_VBlank detection/chat/en.yml
+++ b/src/data/levels/05b_PPU/07_VBlank detection/chat/en.yml
@@ -33,7 +33,7 @@ exercise:
         **->** call ```javascript this._onVisibleLine()```
       **->** if ```javascript this.scanline``` is 241:
         **->** call ```javascript this._onVBlankLine(onInterrupt)```
-      **->** ...rest of the `step(...)` code...
+      **->** __...rest of the code...__
       **[!]** note that we added an `onInterrupt` parameter
   - |-
     📚  now, add these methods:
