--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
@@ -22,7 +22,7 @@ main:
   - |-
     📚  implement this method in 🏞️  `BackgroundRenderer`:
     **_getPaletteId(nameTableId, x, y)**:
-      **->** add the necessary code to return the right palette id for the pixel ~(x, y)~
+      **->** <add the necessary code> to return the right palette id for the pixel ~(x, y)~
       **->** follow 📄  ~/docs/ppu/background_rendering.en.md~ for guidance on how palette ids are encoded
   - |-
     📚  change `BackgroundRenderer::renderScanline()` so it uses `_getPaletteId(...)` and draws the right color, like this:
