--- a/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/es.yml
+++ b/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/es.yml
@@ -16,7 +16,7 @@ exercise:
   messages:
   - vamos a hacer lo siguiente
   - |-
-      📚  en la clase 🖥️  `PPU`, cambia:
+      📚  en la clase 🖥️  `PPU`, <cambia>:
       **_onVisibleLine()**:
         **->** justo debajo de la llamada `renderScanline()` a `backgroundRenderer`...
         **->** ...haz lo mismo con `spriteRenderer`
