--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
@@ -44,7 +44,7 @@ exercise:
       **->** retorna si el píxel ~(x, y)~ en `colorIndexes` es mayor que 0 o no
   - 📚  en 🏞️  `BackgroundRenderer`, en lugar de llamar al método `plot(...)`, llama a `plotBG(...)` pasando el `colorIndex` como último argumento
   - |-
-    📚  en 🛸  `SpriteRenderer`, modifica estos métodos:
+    📚  en 🛸  `SpriteRenderer`, <modifica> estos métodos:
       **_render(...)**:
         **->** al inicio, declara un `buffer` como un array vacío
         **->** en lugar de llamar a ```javascript this.ppu.plot(...)```, guarda la información en el `buffer`:
