--- a/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Wrong Way/chat/en.yml
+++ b/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Wrong Way/chat/en.yml
@@ -68,7 +68,7 @@ exercise:
   messages:
   - (again, ~THIS IS NOT EXACTLY CORRECT~, but it'll work for now!)
   - |-
-    📚  modify these methods of 📜  `PPUScroll`:
+    📚  implement these methods of 📜  `PPUScroll`:
       **onLoad()**:
         **->** sets ```javascript this.x = 0```
         **->** sets ```javascript this.y = 0```
@@ -87,7 +87,7 @@ then:
   - then you will have in ```javascript ppuScroll.x``` and ```javascript ppuScroll.y``` the scroll coordinates!
   - you can apply the scrolling to the backgrounds now!
   - |-
-    📚  go to 🏞️  `BackgroundRenderer` and change `renderScanline()`:
+    📚  go to 🏞️  `BackgroundRenderer` and <change> `renderScanline()`:
       **->** if you previously had something like...
         ```javascript
           for (let x = 0; x < 256; x += 8)```
