--- a/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Wrong Way/chat/es.yml
+++ b/src/data/levels/05b_PPU/21_Scrolling 1-2 - The Wrong Way/chat/es.yml
@@ -68,7 +68,7 @@ exercise:
   messages:
   - (de nuevo, ESTO NO ES EXACTAMENTE CORRECTO, ¡pero funcionará por ahora!)
   - |-
-    📚  modifica estos métodos de 📜  `PPUScroll`:
+    📚  implementa estos métodos de 📜  `PPUScroll`:
       **onLoad()**:
         **->** asigna ```javascript this.x = 0```
         **->** asigna ```javascript this.y = 0```
@@ -87,7 +87,7 @@ then:
   - tendrás en ```javascript ppuScroll.x``` y ```javascript ppuScroll.y``` las coordenadas de desplazamiento
   - ¡ahora puedes aplicar el scrolling a los fondos!
   - |-
-    📚  ve a 🏞️  `BackgroundRenderer` y cambia `renderScanline()`:
+    📚  ve a 🏞️  `BackgroundRenderer` y <cambia> `renderScanline()`:
       **->** si antes tenías algo como...
         ```javascript
           for (let x = 0; x < 256; x += 8)```
