--- a/src/data/levels/05c_APU/04_Audio Registers/chat/en.yml
+++ b/src/data/levels/05c_APU/04_Audio Registers/chat/en.yml
@@ -38,8 +38,9 @@ exercise:
   - |-
     📚  add a `registers` property to 🔊  `APU`, assigned to:
          ```javascript new AudioRegisters(this)```
-  - "📚  lastly, map them in 🐏  `CPUMemory` (regions $4000-$4013, $4015 and $4017):"
-  - <reads> should return ```javascript this.apu.registers.read(address)```
-  - <writes> should call ```javascript this.apu.registers.write(address, value)``` and return
+  - |-
+    📚  lastly, map them in 🐏  `CPUMemory` (regions $4000-$4013, $4015 and $4017):
+      - <reads> should return ```javascript this.apu.registers.read(address)```
+      - <writes> should call ```javascript this.apu.registers.write(address, value)``` and return
   - be careful with 🧮  APUFrameCounter, as it shares its address with the second 🎮  controller port; do not map <reads>! only writes!
   responses: []
