--- a/src/data/levels/04_Memory/01_CPU Memory/chat/en.yml
+++ b/src/data/levels/04_Memory/01_CPU Memory/chat/en.yml
@@ -38,10 +38,10 @@ exercise:
     📚  implement the first `// TODO` of each method:
     **read(address)**:
       **->** if `address` is in the $0000-$07FF range, returns the corresponding byte from `ram`
-        (leave the rest of the code as it is)
+      **->** __leave the rest of the code as it is__
     **write(address, value)**:
       **->** if `address` is in the $0000-$07FF range, writes the `value` to the corresponding byte from `ram` and returns
-        (leave the rest of the code as it is)
+      **->** __leave the rest of the code as it is__
   - 📚  then, as you did with 💾  `Cartridge`, add the class to 📄  ~/code/index.js~
   responses:
   - (*) what about the mirrored bytes? 📐 [help]
