--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/en.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/en.yml
@@ -18,7 +18,7 @@ usage:
 exercise:
   messages:
   - |-
-    📚  in 🛸  `SpriteRenderer`, change the `_render(...)` method; below `buffer[x] = ...`, add:
+    📚  in 🛸  `SpriteRenderer`, <change> the `_render(...)` method; below `buffer[x] = ...`, add:
     **->** if the `sprite.id` is 0 <AND> the background pixel in ~(x, y)~ is opaque:
       **->** sets ```javascript this.ppu.registers.ppuStatus.sprite0Hit = 1```
   - 📚  ah, and reset `sprite0Hit` in `PPU::_onPreLine()`, just like you did with the other two flags!
