Adding 'controls enabled'

--- a/src/data/levels/05c_APU/03_Channels/chat/es.yml
+++ b/src/data/levels/05c_APU/03_Channels/chat/es.yml
@@ -158,6 +158,7 @@ combined:
   - hay un canal extra que no cubrimos aquí, el 📦  Canal DMC
   - permite a los juegos enviar sus propias ondas directamente a la APU
   - ese tendrá un tratamiento especial más adelante, ¡así que no te preocupes por eso!
+  - <! Controles activados.
   - <activé los controles> en la vista del depurador para que puedas jugar un rato
   - cuando quieras, avísame y podemos volver a programar 👀
   responses:
