--- a/src/data/levels/05c_APU/03_Channels/chat/en.yml
+++ b/src/data/levels/05c_APU/03_Channels/chat/en.yml
@@ -157,7 +157,8 @@ combined:
   - as you can see, with some <creativity>, you can create some pretty nice melodies combining all these channels! ✨
   - there's one extra channel we didn't cover here, the 📦  DMC Channel
   - it allows games to provide their custom waves directly to the APU
-  - that one's getting special treatment later, so don't worry about it! 
+  - that one's getting special treatment later, so don't worry about it!
+  - <! Controls enabled.
   - I <enabled the controls> in the debugger view so you can play around for a while
   - once you are ready, let me know and we can go back to programming 👀
   responses:
